--- a/index.html
+++ b/index.html
@@ -1,118 +1,104 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portofolio | Web Developer</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Creative Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <!-- HERO -->
-  <header class="hero">
-    <div class="container">
-      <h1>Halo, saya <span>Web Developer</span></h1>
-      <p>Membangun website modern, cepat, dan bersih untuk personal brand & bisnis.</p>
-      <div class="hero-buttons">
-        <a href="#portfolio" class="btn-primary">Lihat Portofolio</a>
-        <a href="#contact" class="btn-outline">Hubungi Saya</a>
-      </div>
-    </div>
-  </header>
+  <section class="hero-circle">
 
-  <!-- ABOUT -->
-  <section class="about container">
-    <h2>Tentang Saya</h2>
+    <div class="circle-wrapper">
+
+      <!-- TEXT MELINGKAR -->
+      <svg viewBox="0 0 200 200" class="circle-text">
+        <defs>
+          <path id="circlePath"
+            d="M 100,100
+               m -75,0
+               a 75,75 0 1,1 150,0
+               a 75,75 0 1,1 -150,0" />
+        </defs>
+        <text>
+          <textPath href="#circlePath">
+            UI/UX PORTFOLIO • CREATIVE DESIGN • WEB EXPERIENCE •
+          </textPath>
+        </text>
+      </svg>
+
+      <!-- GAMBAR UTAMA -->
+      <img src="BIMA.png" alt="Hero Image">
+
+    </div>
+
+    <!-- NAVIGATION -->
+    <nav class="hero-nav">
+      <a href="#profile">Profile</a>
+      <a href="#skills">Skills</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#experience">Experience</a>
+      <a href="#contact">Contact</a>
+    </nav>
+
+  </section>
+
+  <!-- PROFILE -->
+  <section id="profile" class="section">
+    <h2>Profile</h2>
     <p>
-      Saya seorang web developer yang fokus pada pembuatan website yang rapi,
-      responsif, dan mudah digunakan. Saya menyukai desain clean dan solusi
-      yang efisien.
+      Saya adalah UI/UX & Web Developer yang fokus pada desain bersih,
+      fungsional, dan pengalaman pengguna yang kuat.
     </p>
   </section>
 
   <!-- SKILLS -->
-  <section class="skills">
-    <div class="container">
-      <h2>Keahlian</h2>
-      <div class="skill-grid">
-        <div class="skill-card">HTML</div>
-        <div class="skill-card">CSS</div>
-        <div class="skill-card">JavaScript</div>
-        <div class="skill-card">Responsive Design</div>
-        <div class="skill-card">Git</div>
-        <div class="skill-card">UI/UX Basic</div>
-      </div>
-    </div>
+  <section id="skills" class="section light">
+    <h2>Skills</h2>
+    <ul class="skill-list">
+      <li>UI/UX Design</li>
+      <li>HTML & CSS</li>
+      <li>JavaScript</li>
+      <li>Responsive Design</li>
+      <li>Git & Version Control</li>
+    </ul>
   </section>
 
   <!-- PORTFOLIO -->
-  <section id="portfolio" class="portfolio container">
-    <h2>Portofolio</h2>
+  <section id="portfolio" class="section">
+    <h2>Portfolio</h2>
     <div class="portfolio-grid">
-
-      <div class="portfolio-card">
-        <div class="portfolio-img"></div>
-        <h3>Landing Page UMKM</h3>
-        <p>Template website modern untuk promosi produk dan jasa.</p>
-        <div class="portfolio-links">
-          <a href="#">Live Demo</a>
-          <a href="#">Source Code</a>
-        </div>
-      </div>
-
-      <div class="portfolio-card">
-        <div class="portfolio-img"></div>
-        <h3>Personal Website</h3>
-        <p>Website personal clean dan profesional.</p>
-        <div class="portfolio-links">
-          <a href="#">Live Demo</a>
-          <a href="#">Source Code</a>
-        </div>
-      </div>
-
-      <div class="portfolio-card">
-        <div class="portfolio-img"></div>
-        <h3>Dashboard Admin</h3>
-        <p>Tampilan dashboard sederhana dan informatif.</p>
-        <div class="portfolio-links">
-          <a href="#">Live Demo</a>
-          <a href="#">Source Code</a>
-        </div>
-      </div>
-
+      <div class="portfolio-card"></div>
+      <div class="portfolio-card"></div>
+      <div class="portfolio-card"></div>
     </div>
   </section>
 
   <!-- EXPERIENCE -->
-  <section class="experience">
-    <div class="container">
-      <h2>Pengalaman</h2>
-      <ul>
-        <li>Membuat berbagai template website untuk latihan dan portofolio</li>
-        <li>Mengembangkan website statis dengan fokus performa</li>
-        <li>Menerapkan desain responsif untuk semua ukuran layar</li>
-      </ul>
-    </div>
-  </section>
-
-  <!-- CTA -->
-  <section class="cta">
-    <h2>Tertarik Bekerja Sama?</h2>
-    <p>Mari wujudkan website yang profesional dan efektif.</p>
-    <a href="#contact" class="btn-primary">Kontak Saya</a>
+  <section id="experience" class="section light">
+    <h2>Experience</h2>
+    <p>
+      Mengembangkan berbagai website personal, landing page, dan
+      template UI sebagai bagian dari eksplorasi desain dan teknologi.
+    </p>
   </section>
 
   <!-- CONTACT -->
-  <section id="contact" class="contact container">
-    <h2>Kontak</h2>
-    <p>Email: <strong>emailkamu@email.com</strong></p>
-    <p>LinkedIn | GitHub | WhatsApp</p>
+  <section id="contact" class="section">
+    <h2>Contact</h2>
+    <p>Email: yourmail@email.com</p>
+    <p>LinkedIn • GitHub • WhatsApp</p>
   </section>
 
-  <!-- FOOTER -->
   <footer>
-    <p>© 2026 Web Developer. All rights reserved.</p>
+    © 2026 — Creative Portfolio
   </footer>
-
+  <script>
+    window.addEventListener('load', () => {
+      window.scrollTo(0, 0);
+    });
+  </script>
 </body>
 </html>
